# ghc-select

./: .travis.meta.yml  .travis.yml  README.md  ghc-select.cabal  package.yaml
src/: Main.hs
